@@ -4,11 +4,10 @@
 
 #include "../include/package.hpp"
 
-Package &Package::operator=(Package &&other) {
-    ID_ = other.ID_;
-    other.ID_ = BLANK_ID;
-    return *this;
-}
+
+ElementID Package::BLANK_ID = -1;
+std::set<ElementID> Package::assigned_IDs = {0};
+std::set<ElementID> Package::freed_IDs = {};
 
 ElementID Package::get_id() const {
     return ID_;
@@ -20,23 +19,31 @@ Package::~Package() {
 }
 
 Package::Package() {
-    BLANK_ID = -1;
     if (!freed_IDs.empty()) {
         ID_ = *freed_IDs.begin();
         freed_IDs.erase(ID_);
     }
     else {
-        ID_ = *assigned_IDs.end() + 1;
+        ID_ = *assigned_IDs.end();
         assigned_IDs.insert(ID_);
     }
 }
 
 Package::Package(ElementID id) {
     assigned_IDs.insert(id);
+    if (freed_IDs.find(id) != freed_IDs.end()) {
+        freed_IDs.erase(id);
+    }
     ID_ = id;
 }
 
-Package::Package(Package &&package) {
+Package &Package::operator=(Package &&other)  noexcept {
+    ID_ = other.ID_;
+    other.ID_ = BLANK_ID;
+    return *this;
+}
+
+Package::Package(Package &&package) noexcept {
     ID_ = package.ID_;
     package.ID_ = BLANK_ID;
 }
