@@ -1,6 +1,6 @@
-//#include "gmock/gmock.h"
-//#include "gtest/gtest.h"
-//
+#include "gmock/gmock.h"
+#include "gtest/gtest.h"
+
 //#include "factory.hpp"
 //#include "reports.hpp"
 //
