@@ -1,3 +1,7 @@
+1/13/2023
+Naprawiono klase Package, nie powinna teraz generowac bledow.
+Dziwne zachowanie testu "IsAssignmentOperatorCorrect" z testowania klasy Package
+
 1/9/2023
 Ogarnalem klase PackageQueue, nie wiem czy metoda pop dziala, czy tez powinna byc zrobiona za pomoca switch'a,
 W klasie IPackageStorepile zmienilem "private" na "protected", bo potrzebowalem miec dostep do kontenera.
